--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,22 +42,16 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.0'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:support-annotations:25.0.0'
-
-
     testCompile 'junit:junit:4.12'
-
-
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.google.code.gson:gson:2.4'
-
-
+    compile 'net.danlew:android.joda:2.9.4.1'
+    compile 'com.weiwangcn.betterspinner:library-material:1.1.0'
     compile 'com.jakewharton.timber:timber:4.3.0'
-
     compile 'io.reactivex:rxjava:1.2.1'
     compile 'io.reactivex:rxandroid:1.2.1'
 
