--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.0"
+    dataBinding.enabled = true // <----
     defaultConfig {
         applicationId "com.github.denisura.nytseacher"
         minSdkVersion 16
